# amxcmp

./: .gitignore  README.md  amxcmp.sh  pyproject.toml  setup.py  sim.csv
amxcmp/: cli.py  stats.py  test.py  utils.py
