[tool.poetry]
name = "amxcmp"
version = "1.4.1"
description = ""
authors = ["dinesh876 <dineshadventure15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.4"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
amxcmp = "amxcmp.cli:cli"
